Added functionality to all home page buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_beer">Beer</string>
+    <string name="title_activity_breweries">Breweries</string>
+    <string name="title_activity_town">Town</string>
+    <string name="title_activity_state">State</string>
+    <string name="title_activity_seasons">Seasons</string>
+    <string name="title_activity_nutrition">Nutritional Information</string>
 </resources>
