Added ListView to Beer Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="title_activity_state">State</string>
     <string name="title_activity_seasons">Seasons</string>
     <string name="title_activity_nutrition">Nutritional Information</string>
+    <string name="title_activity_beer_list">Beer</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
