--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
 
     <color name="background">#F7941E</color>
     <string name="title_activity_beer_history">Beer History</string>
+    <string name="title_activity_beer_history_list">History Info of Beer</string>
 </resources>
