--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <color name="background">#F7941E</color>
     <string name="title_activity_beer_history">Beer History</string>
     <string name="title_activity_beer_history_list">History Info of Beer</string>
+    <string name="title_activity_beer_info">BeerInfo</string>
 </resources>
