--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="title_activity_beer_history">Beer History</string>
     <string name="title_activity_beer_history_list">History Info of Beer</string>
     <string name="title_activity_beer_info">BeerInfo</string>
+    <string name="title_activity_connection">Connection</string>
 </resources>
