Window leak issue with Progress Dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="title_activity_connection">Connection</string>
     <string name="title_activity_map">Map</string>
     <string name="Name">Name</string>
+    <string name="ABV">Alcohol By Volume: </string>
+    <string name="Description">Description Unavailable</string>
+    <string name="Brewery">Brewery: </string>
 
     <string name="ok">OK</string>
 
