Home page Ad working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
 
     <string name="ok">OK</string>
 
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+
     <string-array name="type_of_beer">
         <item>Dubbel</item>
         <item>Tripel</item>
